Retrive provided platform libs for the executable and add warnings